docs: fix text overlap on small screen and dynamically resize images

--- a/docs/ql-documentation/ql-training-rst/_static-training/slides-semmle-2/static/theme/css/default.css
+++ b/docs/ql-documentation/ql-training-rst/_static-training/slides-semmle-2/static/theme/css/default.css
@@ -1487,6 +1487,20 @@ p.first.admonition-title {
   width: inherit;
 }
 
+/* scale and centre images*/
+
+.image-box {
+  display: grid;
+  height: 100%;
+}
+
+img {
+  max-width: 100%;
+  max-height: 100vh;
+  margin: auto;
+}
+
+
 @media print {
   /* line 978, ../scss/default.scss */
   slides slide {
@@ -1572,7 +1586,7 @@ p.first.admonition-title {
     overflow: auto;
     position: fixed;
     width: 100%;
-    font-size: 40%;
+    font-size: 45%;
   }
 
   body {
@@ -1585,12 +1599,11 @@ p.first.admonition-title {
     height: auto;
   }
 
-  img {
+  /*img {
     transform: scale(0.6) translate(-20%, 0);
-  }
+  }*/
 
   article {
-    position: absolute;
     top: 20%;
     left: 10%;
     right: 10%; 
